package handlers

import (
	"context"
	"github.com/AppsLab-KE/be-go-gen-grpc/db"
)

func (h *Handler) CreateAccount(ctx context.Context, req *db.CreateAccountRequest) (*db.CreateAccountResponse, error) {

}

func (h *Handler) DeleteAccount(ctx context.Context, req *db.DeleteAccountRequest) (*db.DeleteAccountResponse, error) {

}
