package handlers

import (
	"context"
	"github.com/AppsLab-KE/be-go-gen-grpc/exchange"
)

func (h Handler) CreateConversionRate(ctx context.Context, request *exchange.CreateConversionRateRequest) (*exchange.CreateConversionRateResponse, error) {
	//TODO implement me
	panic("implement me")
}

func (h Handler) ReadConversionRate(ctx context.Context, request *exchange.ReadConversionRateRequest) (*exchange.ReadConversionRateResponse, error) {
	//TODO implement me
	panic("implement me")
}

func (h Handler) UpdateConversionRate(ctx context.Context, request *exchange.UpdateConversionRateRequest) (*exchange.UpdateConversionRateResponse, error) {
	//TODO implement me
	panic("implement me")
}

func (h Handler) DeleteConversionRate(ctx context.Context, request *exchange.DeleteConversionRateRequest) (*exchange.DeleteConversionRateResponse, error) {
	//TODO implement me
	panic("implement me")
}
